--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
                 
                 <ul class="header-adress">
                     
-                    <li><a href="mailto:info@devstudio.com" class="link-adress">info@devstudio.com</a></li>
+                    <li><a href="mailto:info@devstudio.com" class="link-adress">
+                        <svg width="50" height="50">
+                            <use href="./images/symbol-defs.svg#mail-icon-hover">
+                            </use>
+                        </svg>info@devstudio.com</a></li>
                     <li><a href="tel:380961111111" class="link-adress">+38 096 111 11 11</a></li>
                 </ul>
             </div>
