--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <ul class="header-adress">
                     
                     <li><a href="mailto:info@devstudio.com" class="link-adress">
-                        <svg width="50" height="50">
-                            <use href="./images/symbol-defs.svg#mail-icon-hover">
+                        <svg width="16" height="12" class="icon">
+                            <use href="./images/symbol-defs-2.svg#mail-icon-hover">
                             </use>
                         </svg>info@devstudio.com</a></li>
                     <li><a href="tel:380961111111" class="link-adress">+38 096 111 11 11</a></li>
