hw4_blok_spysku

--- a/index.html
+++ b/index.html
@@ -30,11 +30,17 @@
                 <ul class="header-adress">
                     
                     <li><a href="mailto:info@devstudio.com" class="link-adress">
-                        <svg width="16" height="12" class="icon">
-                            <use href="./images/symbol-defs-2.svg#mail-icon-hover">
+                        <svg width="16" height="12" class="contacts-icon">
+                            <use href="./images/icons.svg#-iconmail-icon-hover">
                             </use>
-                        </svg>info@devstudio.com</a></li>
-                    <li><a href="tel:380961111111" class="link-adress">+38 096 111 11 11</a></li>
+                        </svg>
+                        info@devstudio.com</a></li>
+                    <li><a href="tel:380961111111" class="link-adress">
+                        <svg width="10" height="16" class="contacts-icon">
+                            <use href="./images/icons.svg#-iconmobile-icon">
+                            </use>
+                        </svg>
+                        +38 096 111 11 11</a></li>
                 </ul>
             </div>
         </div>
