--- a/portfolio.html
+++ b/portfolio.html
@@ -23,15 +23,26 @@
                 <nav class="header-nav">
                     <a class="logo-link" href="/index.html">Web<span class="logo-header">Studio</span></a>
                     <ul class="header-menu">
-                        <li><a href="./index.html" class="link">Студія</a></li>
-                        <li><a href="./portfolio.html" class="link-current">Портфоліо</a></li>
+                        <li><a href="./index.html" class="link-current">Студія</a></li>
+                        <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
                         <li><a href="" class="link">Контакти</a></li>
                     </ul>
                 </nav>
                 
                 <ul class="header-adress">
-                    <li><a href="mailto:info@devstudio.com" class="link-adress">info@devstudio.com</a></li>
-                    <li><a href="tel:380961111111" class="link-adress">+38 096 111 11 11</a></li>
+                    
+                    <li><a href="mailto:info@devstudio.com" class="link-adress">
+                        <svg width="16" height="12" class="contacts-icon">
+                            <use href="./images/icons.svg#-iconmail-icon-hover">
+                            </use>
+                        </svg>
+                        info@devstudio.com</a></li>
+                    <li><a href="tel:380961111111" class="link-adress">
+                        <svg width="10" height="16" class="contacts-icon">
+                            <use href="./images/icons.svg#-iconmobile-icon">
+                            </use>
+                        </svg>
+                        +38 096 111 11 11</a></li>
                 </ul>
             </div>
         </div>
