--- a/portfolio.html
+++ b/portfolio.html
@@ -133,14 +133,31 @@
     <!-- Футер -->
     <footer class="footer">
         <div class="container">
-            <a class="logo-link" href="/index.html">Web<span class="logo-footer">Studio</span></a>
-        <address>
-           <ul class="list">
-            <li class="adress">м. Київ, пр-т Лесі Українки, 26</li>
-            <li class="footer-adress"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="footer-adress"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-           </ul> 
-        </address>
+            <div class="footer-adress">
+                <span class="logo-setting">
+                    <a href="" class="logo">Web</a></li>
+                    <a href="" class="logo logo-white">Studio</a></li>
+                </span>
+            <ul class="footer-list">
+                <li class="item"><a href="" class="footer-street">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li class="item"><a href="emailto:info@example.com" class="footer-contact">info@example.com</a></li>
+                <li class="item"><a href="tel:+38 096 111 11 11" class="footer-contact">+38 096 111 11 11</a></li>
+            </ul>
+            </div>
+            <div class="container-join">
+            <h2 class="footer-title">ПРИЄДНУЙТЕСЬ</h2>
+            <ul class="footer-social">
+                <li class="item"><a href="https://www.instagram.com/"class="footer-button">
+                        <svg class="social"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+                <li class="item"><a href="https://www.instagram.com/"class="footer-button">
+                        <svg class="social"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+                <li class="item"><a href="https://www.instagram.com/"class="footer-button">
+                        <svg class="social"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+                <li class="item"><a href="https://www.instagram.com/"class="footer-button">
+                        <svg class="social"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+            </ul>
+            </div>
+        </div>
     </div>      
     </footer>
 </body>
